--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,16 +9,28 @@ set(PROJECT_NAME, VulkanAbstractionLayer)
 set(SOURCES 
 "EntryPoint.cpp"
 "VulkanAbstractionLayer/Window.cpp"
- "VulkanAbstractionLayer/VulkanContext.cpp" "VulkanAbstractionLayer/VulkanSurface.cpp")
+"VulkanAbstractionLayer/VulkanContext.cpp" 
+"VulkanAbstractionLayer/VulkanSurface.cpp" 
+"VulkanAbstractionLayer/VirtualFrame.cpp"
+
+"submodules/imgui/imgui.cpp"
+"submodules/imgui/imgui_draw.cpp"
+"submodules/imgui/imgui_demo.cpp"
+"submodules/imgui/imgui_tables.cpp"
+"submodules/imgui/imgui_widgets.cpp"
+"submodules/imgui/imgui_widgets.cpp"
+"submodules/imgui/backends/imgui_impl_vulkan.cpp"
+)
 
 find_package(Vulkan REQUIRED FATAL_ERROR)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/submodules/glfw)
 set(GLFW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/submodules/glfw/include)
 set(GLM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/submodules/glm)
+set(IMGUI_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/submodules/imgui)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLM_INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLM_INCLUDE_DIR} ${IMGUI_INCLUDE_DIR})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${Vulkan_LIBRARIES} glfw)
 
 target_compile_definitions(${PROJECT_NAME} PUBLIC -D APPLICATION_WORKING_DIRECTORY="${CMAKE_CURRENT_SOURCE_DIR}")
