--- a/imgui.ini
+++ b/imgui.ini
@@ -14,13 +14,18 @@ Size=339,273
 Collapsed=0
 
 [Window][Camera]
-Pos=1097,235
+Pos=826,191
 Size=395,149
 Collapsed=0
 
 [Window][Model]
-Pos=1098,166
+Pos=824,124
 Size=256,58
+Collapsed=0
+
+[Window][Light]
+Pos=826,347
+Size=314,80
 Collapsed=0
 
 [Table][0xC9935533,3]
