--- a/examples/imgui.ini
+++ b/examples/imgui.ini
@@ -28,6 +28,11 @@ Pos=966,219
 Size=311,128
 Collapsed=0
 
+[Window][Performace]
+Pos=60,60
+Size=128,48
+Collapsed=0
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
