imgui image view

--- a/examples/ltc/imgui.ini
+++ b/examples/ltc/imgui.ini
@@ -23,3 +23,13 @@ Pos=880,131
 Size=136,54
 Collapsed=0
 
+[Window][Sponza materials]
+Pos=997,336
+Size=280,380
+Collapsed=0
+
+[Window][Image test]
+Pos=60,60
+Size=269,295
+Collapsed=0
+
