--- a/examples/ltc/imgui.ini
+++ b/examples/ltc/imgui.ini
@@ -4,28 +4,28 @@ Size=400,400
 Collapsed=0
 
 [Window][Camera]
-Pos=882,186
-Size=395,147
+Pos=839,186
+Size=438,147
 Collapsed=0
 
 [Window][Model]
-Pos=1016,130
-Size=261,54
+Pos=973,130
+Size=304,54
 Collapsed=0
 
 [Window][Light]
-Pos=884,3
-Size=395,128
+Pos=834,-1
+Size=441,128
 Collapsed=0
 
 [Window][Performace]
-Pos=880,131
+Pos=835,131
 Size=136,54
 Collapsed=0
 
 [Window][Sponza materials]
-Pos=997,336
-Size=280,380
+Pos=837,336
+Size=440,380
 Collapsed=0
 
 [Window][Image test]
