multiple area lights in LTC sample

--- a/examples/ltc/imgui.ini
+++ b/examples/ltc/imgui.ini
@@ -1,21 +1,21 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=751,203
 Size=400,400
 Collapsed=0
 
 [Window][Camera]
-Pos=1482,191
+Pos=1290,1
 Size=438,140
 Collapsed=0
 
 [Window][Model]
-Pos=1480,142
+Pos=1290,143
 Size=440,51
 Collapsed=0
 
 [Window][Light]
 Pos=1480,3
-Size=441,139
+Size=441,216
 Collapsed=0
 
 [Window][Performace]
@@ -24,12 +24,17 @@ Size=136,51
 Collapsed=0
 
 [Window][Sponza materials]
-Pos=1484,331
+Pos=1291,496
 Size=435,338
 Collapsed=0
 
 [Window][Image test]
 Pos=60,60
 Size=269,295
+Collapsed=0
+
+[Window][Lights]
+Pos=1289,195
+Size=434,301
 Collapsed=0
 
