--- a/examples/dragons/imgui.ini
+++ b/examples/dragons/imgui.ini
@@ -24,13 +24,18 @@ Size=256,58
 Collapsed=0
 
 [Window][Light]
-Pos=966,219
-Size=311,128
+Pos=883,219
+Size=394,128
 Collapsed=0
 
 [Window][Performace]
-Pos=1,3
-Size=128,48
+Pos=884,4
+Size=135,58
+Collapsed=0
+
+[Window][Materials]
+Pos=884,350
+Size=394,343
 Collapsed=0
 
 [Table][0xC9935533,3]
