cloth simulation sample

--- a/examples/clothsim/imgui.ini
+++ b/examples/clothsim/imgui.ini
@@ -4,7 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Camera]
-Pos=30,41
+Pos=1519,88
 Size=201,146
+Collapsed=0
+
+[Window][Performace]
+Pos=1353,88
+Size=163,48
+Collapsed=0
+
+[Window][node control]
+Pos=1350,6
+Size=371,80
+Collapsed=0
+
+[Window][Ball]
+Pos=1149,4
+Size=201,133
+Collapsed=0
+
+[Window][Balls]
+Pos=57,28
+Size=407,133
 Collapsed=0
 
