remove descriptor caching, fix probe position calculation

--- a/examples/gi/imgui.ini
+++ b/examples/gi/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Camera]
-Pos=1518,350
-Size=201,146
+Pos=1236,177
+Size=244,146
 Collapsed=0
 
 [Window][Model]
@@ -14,8 +14,8 @@ Size=333,54
 Collapsed=0
 
 [Window][Performace]
-Pos=1521,502
-Size=201,70
+Pos=1482,176
+Size=239,53
 Collapsed=0
 
 [Window][Sponza materials]
@@ -24,7 +24,17 @@ Size=541,343
 Collapsed=0
 
 [Window][Reflection probes]
-Pos=1181,409
-Size=333,166
+Pos=1240,668
+Size=485,121
+Collapsed=0
+
+[Window][materials]
+Pos=1238,327
+Size=490,339
+Collapsed=0
+
+[Window][meshes]
+Pos=1235,4
+Size=486,169
 Collapsed=0
 
